# data_aquisition

./: .gitignore  CAMERA_POINT_CLOUD_FIXES.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  CODE_STRUCTURE.md  PROGRESS_LOG.md  README.Livox.md  README.md  package.xml
build_test/: CTestConfiguration.ini
build_test/ament_cmake_core/: data_aquisitionConfig.cmake  package.cmake
build_test/ament_cmake_core/stamps/: package.xml.stamp
build_test/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
build_test/ament_cmake_index/share/ament_index/resource_index/package_run_dependencies/: data_aquisition
build_test/ament_cmake_index/share/ament_index/resource_index/parent_prefix_path/: data_aquisition
build_test/ament_cmake_index/share/ament_index/resource_index/rclcpp_components/: data_aquisition
build_test/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
calibration_statique/: README.md  charuco_cloud_camera.pcd  charuco_cloud_lidar.pcd  generate_charuco_board.py  run_calibration.sh  static_calibration.py  zed2i_intrinsics.npz
calibration_statique/debug/: target_cloud.ply
calibration_statique/results/: calibration_timestamp.txt  tf_statique.npy  tf_statique_inverse.npy
config/: camera_view.rviz  pointcloud_viewer.rviz
config/camera/: zed_camera_params.yaml
config/gnss/: gnss_params.yaml
config/lidar/: HAP_config.json  livox_params.yaml
config/recording/: rosbag_recorder_params.yaml
converted_clouds/: 1743694393802279126.ply  1743694393901434532.ply  1743694394001167380.ply  1743694394101733356.ply  1743694394203401225.ply  1743694394302090583.ply  1743694394439534055.ply  1743694394602547864.ply  1743694394702460204.ply  1743694394802065215.ply
include/: data_recorder_node.hpp
include/recording/: rosbag_recorder.h
include/sensors/camera/: camera_config.h  camera_manager.h  zed_camera_driver.h  zed_camera_node.h
include/sensors/gnss/: base64.h  cuda_runtime.h  gnss_config.h  gnss_driver.h  gnss_manager.h  gnss_node.h  nmea_parser.h  ntrip_client.h  rtk_processor.h
include/sensors/lidar/: lidar_config.h  lidar_driver.h  lidar_manager.h  livox_adapter_node.h  livox_converter.h  livox_lidar_node.h
include/sync/: sensor_synchronizer.hpp  sync_metrics_msg.hpp
launch/: all_sensors_launch.py  cameras_launch.py  data_recorder_only_launch.py  gnss_launch.py  lidar_direct_launch.py  lidar_launch.py  lidar_with_sync_launch.py  multi_camera_launch.py  raw_topic_diagnostics_launch.py  recorder_launch.py  rosbag_recorder_launch.py  sync_launch.py  sync_with_recorder_launch.py  synchronized_recorder_launch.py  topic_diagnostics_launch.py  zed_x_cameras_launch.py
scripts/: batch_convert_clouds.py  convert_cloud_to_pcd.py  convert_cloud_to_ply.py  fix_camera_pointclouds.sh  launch_multicamera.sh  migrate_livox_sdk.sh  minimal_lidar_test.sh  run_livox_adapter.sh  run_livox_direct.sh  run_livox_lidar.sh  run_recorder.sh  run_sensors.sh  run_sensors_node.sh  run_sensors_with_transformers.sh  run_sync_node.sh  run_synchronized_lidar.sh  run_synchronized_sensors.sh  setup_rviz_for_pointcloud.sh  test_camera_namespaces.sh  test_camera_nodes.sh  test_improved_pointcloud.sh  test_livox_adapter.sh  test_livox_connection.sh  test_pointcloud.sh  test_recorder.sh  test_zed_cameras.sh  visualize_livox_pointcloud.sh  visualize_zed_pointcloud.sh
scripts/camera/: launch_all_cameras.sh
scripts/lidar/: run_livox_simple.sh  run_livox_terminal.sh  run_livox_with_transform.sh
scripts/recording/: run_synchronized_recording.sh
src/: README.bag.md  README.gnss.md  README.sensor_topics.md  README.sync.md
src/camera/: README.md  ZED_CAMERA_GUIDE.md  camera_config.cpp  zed_camera_driver.cpp  zed_camera_node.cpp
src/gnss/: base64.cpp  gnss_driver.cpp  gnss_node.cpp
src/lidar/: README.lidar.md  README.md  lidar_config.cpp  livox_lidar_main.cpp
src/recorder/: data_recorder_node.cpp  main.cpp
src/recording/: rosbag_recorder.cpp  rosbag_recorder_main.cpp
src/sensors/: README.camera.md  README.lidar.md
src/sensors/camera/: camera_manager.cpp  unified_camera_controller.cpp  zed_2i_driver.cpp  zed_camera_driver.cpp  zed_camera_main.cpp
src/sensors/gnss/: gnss_config.cpp  gnss_main.cpp  gnss_manager.cpp  nmea_parser.cpp  ntrip_client.cpp  rtk_processor.cpp
src/sensors/lidar/: lidar_driver.cpp  lidar_manager.cpp  livox_adapter_main.cpp  livox_adapter_node.cpp  livox_converter.cpp  livox_lidar_node.cpp
src/sync/: README.md  sensor_synchronizer.cpp  sync_main.cpp  sync_node_component.cpp
